--- a/css/falling.css
+++ b/css/falling.css
@@ -15,7 +15,7 @@
     display: none;
     position: absolute;
     left: 60px;
-    top: 320px;
+    top: 300px;
 }
 
 .input1{
@@ -42,4 +42,14 @@
     top: hit.top-input2.height;
 	background:url("images/button_normal.png");
 	
+}
+
+
+#score{
+	text-align:center;
+	tex
+	width:300px;
+	height:500px;
+    background:url(dialog.png);
+    background-size:100% 100%;
 }
