--- a/css/game.css
+++ b/css/game.css
@@ -3,3 +3,17 @@ canvas{
 	height: 640;
 	position: absolute;
 }
+
+#innergame{
+	opacity: 0;
+}
+#innergame.cameout{
+	opacity:1;
+	-webkit-transition:opacity .5s linear;
+	transition:opacity .5s linear;
+}
+#innergame.fadeout{
+	opacity:0;
+	-webkit-transition:opacity .5s linear;
+	transition:opacity .5s linear;
+}
