--- a/css/falling.css
+++ b/css/falling.css
@@ -77,7 +77,7 @@
 
 .input1{
 	width:68px;
-  	  height:25px;
+  	  height:50px;
    	 border-style: none;
      border-color: inherit; 
    	 border-width: 0;
@@ -85,12 +85,12 @@
     left: 20px;
     top: hit.top-input1.height;
 	background:url("images/button_normal.png");
-	
+	    background-size:200% 100%;
 }
 
 .input2{
 	width:68px;
-  	  height:25px;
+  	  height:50px;
    	 border-style: none;
      border-color: inherit; 
    	 border-width: 0;
@@ -98,6 +98,7 @@
     left: 115px;
     top: hit.top-input2.height;
 	background:url("images/button_normal.png");
+    background-size:200% 100%;
 }
 
 
