--- a/css/falling.css
+++ b/css/falling.css
@@ -14,6 +14,25 @@
   background-image:url("images/startimg.png");
 }
 
+#pause{
+  width:220px;
+  height:180px;
+    background:url(dialog.png);
+    background-size:100% 100%;
+    display: none;
+    position: absolute;
+    left: 60px;
+    top: 230px;
+}
+
+#wannaout{
+  width:100px;
+  height:80px;
+    display: none;
+    position: absolute;
+    left: 60px;
+    top: 0px;
+}
 #startMan{
   width: 80;
   height: 95;
